Renames project and refactors the code